--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <!DOCTYPE html>
-<h1>this is a test</h1>
+<h1><strong>Frickware V1<br /><br /></strong></h1>
+<h2>This was proudly made by Praxor. <br /><br />!!! THIS IS ALSO IN DEVELOPMENT !!!</h2>
