--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
 <!DOCTYPE html>
-<h1><strong>Frickware V1<br /><br /></strong></h1>
-<h2>This was proudly made by Praxor. <br /><br />!!! THIS IS ALSO IN DEVELOPMENT !!!</h2>
+<h1><strong>Site is under construction.<br /><br /></strong></h1>
