--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <!DOCTYPE html>
-<h1><strong>Site is under construction.<br /><br /></strong></h1>
+<h1><strong>Welcome to my domain's index page!<br /><br /></strong></h1>
+<h2>This is a repo.</h2>
