--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <!DOCTYPE html>
 <h1><strong>Welcome to my domain's index page!<br /><br /></strong></h1>
 <h2>This is a repo.</h2>
+<h2>Have Joe biden.</h2>
+<img src="https://upload.wikimedia.org/wikipedia/commons/6/68/Joe_Biden_presidential_portrait.jpg" alt="Joe Biden">
