--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <h1><strong>Welcome to my domain's index page!<br /><br /></strong></h1>
 <h2>This is a repo.</h2>
 <h2>Have Joe biden.</h2>
-<img src="https://upload.wikimedia.org/wikipedia/commons/6/68/Joe_Biden_presidential_portrait.jpg" alt="Joe Biden">
+<img src="https://www.history.com/.image/ar_4:3%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cq_auto:good%2Cw_1200/MTc2MzAyNDY4NjM0NzgwODQ1/joe-biden-gettyimages-1267438366.jpg" alt="Joe Biden">
