--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
-<h1><strong>Welcome to my domain's index page!<br /><br /></strong></h1>
-<h2>This is a repo.</h2>
+<h2>If you see this, I've messed something up.</h2>
+<h3>https://www.praxor.tk/home<h3>
 
