--- a/Neon.html
+++ b/Neon.html
@@ -27,7 +27,7 @@
     <meta property="og:description" content="A free working client for 1.8 combat.">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Neon.html" data-home-page-title="Neon" class="u-body u-overlap u-overlap-contrast"><header class="u-clearfix u-grey-90 u-header u-header" id="sec-f7f1"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-overlap u-overlap-contrast"><header class="u-clearfix u-grey-90 u-header u-header" id="sec-f7f1"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="272" data-image-height="93">
           <img src="images/Neon.png" class="u-logo-image u-logo-image-1">
         </a>
