--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-howdy
+<!DOCTYPE html>
+<head>
+    <title>Praxor's Website 2.0!</title>
+    <style>
+        body {background-color: rgb(31, 31, 31);}
+        h1 {color: white;}
+        h2 {color: white;}
+        h3 {color: white;}
+        li {color: white;}
+        p {color: white;}
+    </style>
+</head>
+<html>
+    <body>
+        <h1>Hello world!</h1>
+        <h2>Welcome to my website!</h2>
+        <p>This is a brand new website that I am currently making while in the process of learning HTML.</p>
+        <h2>Who am I?</h2>
+        <p>My name is Praxor, and I am a freelance developer who wants to know more about software development and programming.</p>
+        <h2>Coding Languages I Know</h2>
+        <ul>
+            <li>Some Python</li>
+            <li>No Java</li>
+            <li>Currently Learning C#</li>
+            <li>Currently Learning HTML</li>
+        </ul>
+        <div id="socials">
+            <h2>Socials</h2>
+            <a href="https://e.rip/☈" target="_blank"><p>You can find most of my socials here.</p></a>
+            <a href="https://discord.gg/BPk88Hsr5Y" target="_blank"><p>My discord server.</p></a>
+        </div>
+        <div id="friends group">
+            <h2>Friends</h2>
+            <h3>Toohi</h3>
+            <p>funny gaming man with a crown</p>
+            <ul>
+                <li>minecraft</li>
+                <li>funny</li>
+                <li>(your ip)</li>
+            </ul>
+            <h3>Macintoshing</h3>
+            <p>funny gaming computer with a crown</p>
+            <ul>
+                <li>minecraft</li>
+                <li>also codes like me</li>
+                <li>professional extremist</li>
+            </ul>
+            <h3>Larvi</h3>
+            <p>funny gaming dinosaur that is pro pokemon</p>
+            <ul>
+                <li>pro cheddar</li>
+                <li>speaks russian</li>
+                <li>thats about it i think</li>
+            </ul>
+            <img src="./larvi.gif"><img src="./praxor.png" width="64" height="64">
+        </div>
+    </body>
+</html>
