--- a/index.html
+++ b/index.html
@@ -31,26 +31,33 @@
         </div>
         <div id="friends group">
             <h2>Friends</h2>
-            <h3>Toohi</h3>
+            <h3><strong>Toohi</strong></h3>
             <p>funny gaming man with a crown</p>
             <ul>
                 <li>minecraft</li>
                 <li>funny</li>
                 <li>(your ip)</li>
             </ul>
-            <h3>Macintoshing</h3>
+            <h3><strong>Macintoshing</strong></h3>
             <p>funny gaming computer with a crown</p>
             <ul>
                 <li>minecraft</li>
                 <li>also codes like me</li>
                 <li>professional extremist</li>
             </ul>
-            <h3>Larvi</h3>
+            <h3><strong>Larvi</strong></h3>
             <p>funny gaming dinosaur that is pro pokemon</p>
             <ul>
                 <li>pro cheddar</li>
                 <li>speaks russian</li>
                 <li>thats about it i think</li>
+            </ul>
+            <h3><strong>Turio</strong></h3>
+            <p>professional artist also funny gamer</p>
+            <ul>
+                <li>likes scatman</li>
+                <li>likes art</li>
+                <li>professional (real) <strong>(im being serious)</strong></li>
             </ul>
             <img src="./larvi.gif"><img src="./praxor.png" width="64" height="64">
         </div>
