--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         h3 {color: white;}
         li {color: white;}
         p {color: white;}
+        @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
     </style>
+    <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <html>
     <body>
