--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
     </style>
     <link href="style.css" type="text/css" rel="stylesheet">
+    <link rel="icon" href="./icon.png">
 </head>
 <html>
     <body>
