--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
         h3 {color: white;}
         li {color: white;}
         p {color: white;}
-        @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
     <link href="style.css" type="text/css" rel="stylesheet">
     <link rel="icon" href="./icon.png">
 </head>
 <html>
     <body>
         <h1>Hello world!</h1>
+        <hr>
+        <div id="headbar">
+            <img href="praxor.png">
+        </div>
+        <hr>
         <h2>Welcome to my website!</h2>
         <p>This is a brand new website that I am currently making while in the process of learning HTML.</p>
         <h2>Who am I?</h2>
