--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <html>
     <body>
         <h1>Hello world!</h1>
-        <hr>
         <div id="headbar">
-            <img href="praxor.png">
+            <hr>
+            <img src="./praxor.png" width="64" height="64">
+            <hr>
         </div>
-        <hr>
         <h2>Welcome to my website!</h2>
         <p>This is a brand new website that I am currently making while in the process of learning HTML.</p>
         <h2>Who am I?</h2>
