--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Hello world!</h1>
         <div id="headbar">
             <hr>
-            <img src="./praxor.png" width="64" height="64">
+            <img src="./praxor.png" width="64" height="64"><h2>Praxor's Website 2.0!</h2></img>
             <hr>
         </div>
         <h2>Welcome to my website!</h2>
