--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
         </div>
         <h2>Welcome to my website!</h2>
         <p>This is a brand new website that I am currently making while in the process of learning HTML.</p>
+        <hr>
         <h2>Who am I?</h2>
         <p>My name is Praxor, and I am a freelance developer who wants to know more about software development and programming.</p>
+        <hr></hr>
         <h2>Coding Languages I Know</h2>
         <ul>
             <li>Some Python</li>
@@ -35,11 +37,13 @@
             <li>Currently Learning HTML</li>
         </ul>
         <div id="socials">
+            <hr>
             <h2>Socials</h2>
             <a href="https://e.rip/☈" target="_blank"><p>You can find most of my socials here.</p></a>
             <a href="https://discord.gg/BPk88Hsr5Y" target="_blank"><p>My discord server.</p></a>
         </div>
         <div id="friends group">
+            <hr>
             <h2>Friends</h2>
             <h3><strong>Toohi</strong></h3>
             <p>funny gaming man with a crown</p>
@@ -69,6 +73,14 @@
                 <li>likes art</li>
                 <li>professional (real) <strong>(im being serious)</strong></li>
             </ul>
+            <h3><strong>Bluee</strong></h3>
+            <p>gmer</p>
+            <ul>
+                <li>minecraft bedwar player</li>
+                <li>epico!!!</li>
+                <li>professional china supporter</li>
+            </ul>
+            <hr>
             <img src="./larvi.gif"><img src="./praxor.png" width="64" height="64">
         </div>
     </body>
