--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
     <link href="style.css" type="text/css" rel="stylesheet">
     <link rel="icon" href="./icon.png">
+    <meta charset="UTF-8">
+    <meta name="author" content="Praxor's Website 2.0!"
 </head>
 <html>
     <body>
