--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="style.css" type="text/css" rel="stylesheet">
     <link rel="icon" href="./icon.png">
     <meta charset="UTF-8">
-    <meta name="author" content="Praxor's Website 2.0!"
+    <meta name="title" content="Praxor's Website 2.0!"
 </head>
 <html>
     <body>
@@ -83,7 +83,7 @@
                 <li>professional china supporter</li>
             </ul>
             <hr>
-            <img src="./larvi.gif"><img src="./praxor.png" width="64" height="64">
+            <img src="./larvi.gif"><img src="./praxor.png" width="64" height="64"><img src="./mac.png" width="64" height="64"><img src="./blue.png" width="64" height="64">
         </div>
     </body>
 </html>
