--- a/memes.html
+++ b/memes.html
@@ -15,7 +15,7 @@
     <link href="style.css" type="text/css" rel="stylesheet">
     <link rel="icon" href="./icon.png">
     <meta charset="UTF-8">
-    <meta name="author" content="Praxor's Meme Archive">
+    <meta name="title" content="Praxor's Meme Archive">
 </head>
 <html>
     <h1>Hello world!</h1>
