--- a/index.html
+++ b/index.html
@@ -14,8 +14,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
     <link href="style.css" type="text/css" rel="stylesheet">
     <link rel="icon" href="./icon.png">
-    <meta charset="UTF-8">
-    <meta name="title" content="Praxor's Website 2.0!"
+<!-- Primary Meta Tags -->
+<meta name="title" content="Praxor's Website 2.0!">
+<meta name="description" content="Welcome to my epic website!">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://praxor.tk/">
+<meta property="og:title" content="Praxor's Website 2.0!">
+<meta property="og:description" content="Welcome to my epic website!">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://praxor.tk">
+<meta property="twitter:title" content="Praxor's Website 2.0!">
+<meta property="twitter:description" content="Welcome to my epic website!">
 </head>
 <html>
     <body>
