--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <head>
     <title>Praxor's Website 2.0!</title>
     <style>
-        body {background-color: rgb(31, 31, 31);}
+        body {background-color: rgb(27, 27, 33);}
         h1 {color: white;}
         h2 {color: white;}
         h3 {color: white;}
+        h4 {color: rgb(24, 24, 30);}
         li {color: white;}
         p {color: white;}
     </style>
@@ -38,10 +39,14 @@
           </center>
           <hr>
         </div>
-        <h2>Welcome to my website!</h2>
-        <p>This is a brand new website that I am currently making while in the process of learning HTML.</p>
-        <h2>Who am I?</h2>
-        <p>My name is Praxor, and I am a freelance developer who wants to know more about software development and programming.</p>
+        <center>
+          <h1>About</h1>
+          <h2>Welcome to my website!</h2>
+          <p>This is a brand new website that I am currently making while in the process of learning HTML.</p>
+          <h2>Who am I?</h2>
+          <p>My name is Praxor, and I am a freelance developer who wants to know more about software development and programming.</p>
+          <hr>
+        </center>
         <h2>Coding Languages I Know</h2>
         <ul>
             <li>Some Python</li>
@@ -91,8 +96,17 @@
                 <li>epico!!!</li>
                 <li>professional china supporter</li>
             </ul>
-            <hr>
+            <br>
+            <hr color="red">
+            <hr color="orange">
+            <hr color="yellow">
+            <hr color="green">
+            <hr color="blue">
+            <hr color="purple">
+            <br>
             <img src="./larvi.gif"><img src="./praxor.png" width="64" height="64"><img src="./mac.png" width="64" height="64"><img src="./blue.png" width="64" height="64">
+            <br>
+            <h4><br>made with love by praxor himself <3</h4>
         </div>
     </body>
 </html>
