--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
         </ul>
         <div id="socials">
             <h2>Socials</h2>
-            <a href="https://e.rip/☈" target="_blank"><p>You can find most of my socials here.</p></a>
-            <a href="https://discord.gg/BPk88Hsr5Y" target="_blank"><p>My discord server.</p></a>
+            <a href="https://e.rip/☈" target="_blank"><p>Click me to visit my e.rip with my socials!</p></a>
+            <a href="https://discord.gg/BPk88Hsr5Y" target="_blank"><p>Click me to join my Discord server!</p></a>
+            <a href="https://github.com/meowking5" target="_blank"><p>Click me to visit my GitHub!</p></a>
         </div>
         <div id="friends group">
             <h2>Friends</h2>
