--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <p>My name is Praxor, and I am a freelance developer who wants to know more about software development and programming.</p>
           <hr>
         </center>
+        <h1>Some cool info about me!</h1>
         <h2>Coding Languages I Know</h2>
         <ul>
             <li>Some Python</li>
@@ -60,8 +61,9 @@
             <a href="https://discord.gg/BPk88Hsr5Y" target="_blank"><p>Click me to join my Discord server!</p></a>
             <a href="https://github.com/meowking5" target="_blank"><p>Click me to visit my GitHub!</p></a>
         </div>
+        <hr>
         <div id="friends group">
-            <h2>Friends</h2>
+            <h1>Friends</h1>
             <h3><strong>Toohi</strong></h3>
             <p>funny gaming man with a crown</p>
             <ul>
@@ -97,17 +99,20 @@
                 <li>epico!!!</li>
                 <li>professional china supporter</li>
             </ul>
-            <br>
-            <hr color="red">
-            <hr color="orange">
-            <hr color="yellow">
-            <hr color="green">
-            <hr color="blue">
-            <hr color="purple">
-            <br>
-            <img src="./larvi.gif"><img src="./praxor.png" width="64" height="64"><img src="./mac.png" width="64" height="64"><img src="./blue.png" width="64" height="64">
-            <br>
-            <h4><br>made with love by praxor himself <3</h4>
+        </div>
+        <div id="">
+        <div id="cusfooter">
+          <br>
+          <hr color="red">
+          <hr color="orange">
+          <hr color="yellow">
+          <hr color="green">
+          <hr color="blue">
+          <hr color="purple">
+          <br>
+          <img src="./larvi.gif"><img src="./praxor.png" width="64" height="64"><img src="./mac.png" width="64" height="64"><img src="./blue.png" width="64" height="64">
+          <br>
+          <h4><br>made with love by praxor himself <3</h4>
         </div>
     </body>
 </html>
