--- a/index.html
+++ b/index.html
@@ -100,7 +100,12 @@
                 <li>professional china supporter</li>
             </ul>
         </div>
-        <div id="">
+        <hr>
+        <div id="subpages">
+          <h1>Subpages you can visit:</h1>
+          <a href="https://praxor.tk/memes" target="_blank">Online Meme Archive by me</a>
+          <a href="https://praxor.tk/splash" target="-_blank">Cool splash screen I will add</a>
+        </div>
         <div id="cusfooter">
           <br>
           <hr color="red">
