--- a/memes.html
+++ b/memes.html
@@ -20,4 +20,12 @@
 <html>
     <h1>Hello world!</h1>
     <hr>
+    <div id="memes">
+      <h1>Online Meme Repository by Praxor</h1>
+      <hr>
+      <h2>Classy Memes</h2>
+      <div id=classy-memes>
+        <p>Under construction!</p>
+      </div>
+    </div>
 </html>
