--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <body>
         <div id="headbar">
           <center>
-            <h1>Hello world! Welcome to Praxor's Website 2.0!</h1>
+            <h1>Hello world!</h1>
+            <h2>Welcome to Praxor's Website 2.0!</h2>
           </center>
           <hr>
         </div>
