--- a/index.html
+++ b/index.html
@@ -50,12 +50,7 @@
         </center>
         <h1>Some cool info about me!</h1>
         <h2>Coding Languages I Know</h2>
-        <ul>
-            <li>Some Python</li>
-            <li>No Java</li>
-            <li>Currently Learning C#</li>
-            <li>Currently Learning HTML</li>
-        </ul>
+        <p>Some Python, No Java, Currently Learning C#, and I am currently learning HTML.</p>
         <div id="socials">
             <h2>Socials</h2>
             <a href="https://e.rip/☈" target="_blank"><p>Click me to visit my e.rip with my socials!</p></a>
