--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="headbar">
           <center>
             <h1>Hello world!</h1>
-            <h2>Welcome to Praxor's Website 2.0!</h2>
+            <a href="https://github.com/MeowKing5/praxor.tk"><h2>Welcome to Praxor's Website 2.0!</h2></a>
           </center>
           <hr>
         </div>
