--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         h4 {color: rgb(24, 24, 30);}
         li {color: white;}
         p {color: white;}
-        a {color: blue;}
+        a {color: white;}
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
