--- a/index.html
+++ b/index.html
@@ -101,8 +101,10 @@
         <hr>
         <div id="subpages">
           <h1>Subpages you can visit:</h1>
-          <a href="https://praxor.tk/memes" target="_blank">Online Meme Archive by me</a>
-          <a href="https://praxor.tk/splash" target="-_blank">Cool splash screen I will add</a>
+          <strong>
+            <a href="https://praxor.tk/memes" target="_blank">Online Meme Archive by me</a>
+            <a href="https://praxor.tk/splash" target="-_blank">Cool splash screen I will add</a>
+          </strong>
         </div>
         <br>
         <div id="cusfooter">
