heavy update (TF2 REFERENCE)
moved friends page to its own page and edited the index

--- a/index.html
+++ b/index.html
@@ -60,50 +60,12 @@
         </div>
         <hr>
         </center>
-        <div id="friends group">
-            <h1>Friends</h1>
-            <h3><strong>Toohi</strong></h3>
-            <p>funny gaming man with a crown</p>
-            <ul>
-                <li>minecraft</li>
-                <li>funny</li>
-                <li>(your ip)</li>
-            </ul>
-            <h3><strong>Macintoshing</strong></h3>
-            <p>funny gaming computer with a crown</p>
-            <ul>
-                <li>minecraft</li>
-                <li>also codes like me</li>
-                <li>professional extremist</li>
-            </ul>
-            <h3><strong>Larvi</strong></h3>
-            <p>funny gaming dinosaur that is pro pokemon</p>
-            <ul>
-                <li>pro cheddar</li>
-                <li>speaks russian</li>
-                <li>thats about it i think</li>
-            </ul>
-            <h3><strong>Turio</strong></h3>
-            <p>professional artist also funny gamer</p>
-            <ul>
-                <li>likes scatman</li>
-                <li>likes art</li>
-                <li>professional (real) <strong>(im being serious)</strong></li>
-            </ul>
-            <h3><strong>Bluee</strong></h3>
-            <p>gmer</p>
-            <ul>
-                <li>minecraft bedwar player</li>
-                <li>epico!!!</li>
-                <li>professional china supporter</li>
-            </ul>
-        </div>
-        <hr>
         <div id="subpages">
           <h1>Subpages you can visit:</h1>
           <strong>
             <a href="https://praxor.tk/memes" target="_blank">Online Meme Archive by me</a>
-            <a href="https://praxor.tk/splash" target="-_blank">Cool splash screen I will add</a>
+            <a href="https://praxor.tk/splash" target="_blank">Cool splash screen I will add</a>
+            <a href="https://praxor.tk/friends" target="_blank">Friend group (Moved here!)</a>
           </strong>
         </div>
         <br>
