--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://praxor.tk/">
+<meta property="og:url" content="https://praxor.wtf/">
 <meta property="og:title" content="Praxor's Website 2.0!">
 <meta property="og:description" content="Welcome to my epic website!">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://praxor.tk">
+<meta property="twitter:url" content="https://praxor.wtf">
 <meta property="twitter:title" content="Praxor's Website 2.0!">
 <meta property="twitter:description" content="Welcome to my epic website!">
 </head>
@@ -37,7 +37,7 @@
         <div id="headbar">
           <center>
             <h1>Hello world!</h1>
-            <a href="https://github.com/MeowKing5/praxor.tk" target="_blank"><h2>Welcome to Praxor's Website 2.0!</h2></a>
+            <a href="https://github.com/MeowKing5/praxor.wtf" target="_blank"><h2>Welcome to Praxor's Website 2.0!</h2></a>
           </center>
           <hr>
         </div>
@@ -62,9 +62,9 @@
         <div id="subpages">
           <h1>Subpages you can visit:</h1>
           <strong>
-            <a href="https://praxor.tk/memes" target="_blank">Online Meme Archive by me</a>
-            <a href="https://praxor.tk/splash" target="_blank">Cool splash screen I will add</a>
-            <a href="https://praxor.tk/friends" target="_blank">Friend group (Moved here!)</a>
+            <a href="https://praxor.wtf/memes" target="_blank">Online Meme Archive by me</a>
+            <a href="https://praxor.wtf/splash" target="_blank">Cool splash screen I will add</a>
+            <a href="https://praxor.wtf/friends" target="_blank">Friend group (Moved here!)</a>
           </strong>
         </div>
         <br>
