very hot website update

--- a/index.html
+++ b/index.html
@@ -16,64 +16,51 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
     <link href="style.css" type="text/css" rel="stylesheet">
     <link rel="icon" href="./icon.png">
+    <link rel="stylesheet" href="dist/tuicss.min.css"/>
+    <script src="dist/tuicss.min.js"></script>
 <!-- Primary Meta Tags -->
 <meta name="title" content="Praxor's Website 2.0!">
-<meta name="description" content="Welcome to my epic website!">
+<meta name="description" content="The h0me 0f sc0nes!">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://praxor.wtf/">
 <meta property="og:title" content="Praxor's Website 2.0!">
-<meta property="og:description" content="Welcome to my epic website!">
+<meta property="og:description" content="The h0me 0f sc0nes!">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://praxor.wtf">
 <meta property="twitter:title" content="Praxor's Website 2.0!">
-<meta property="twitter:description" content="Welcome to my epic website!">
+<meta property="twitter:description" content="The h0me 0f sc0nes!">
 </head>
-<html>
-    <body>
-        <div id="headbar">
-          <center>
-            <h1>Hello world!</h1>
-            <a href="https://github.com/MeowKing5/praxor.wtf" target="_blank"><h2>Welcome to Praxor's Website 2.0!</h2></a>
-          </center>
-          <hr>
+<html lang="en" class="tui-bg-purple-black">
+    <body class="tui-bg-purple-black">
+        <div class="tui-nav">
+          <span class="tui-datetime" data-format="y/M/d H:m:s"></span>
+          <ul>
+            <li class="tui-dropdown">
+              <span class="red-168-text">H</span>ome
+            <li class="tui-dropdown">
+              <span class="red-168-text">E</span>xtras
+              <div class="tui-dropdown-content">
+                <ul>
+                  <li>
+                    <a href="https://praxor.wtf/friends" target="_blank"><span class="red-168-text">F</span>riends</a>
+                  </li>
+                  <li>
+                    <a href="https://praxor.wtf/files" target="_blank">F<span class="red-168-text">i</span>les</a>
+                  </li>
+                </ul>
+              </div>
+            <li class="tui-dropdown">
+              <span class="red-168-text">A</span>bout
+          </ul>
         </div>
-        <center>
-          <h1>About</h1>
-          <h2>Welcome to my website!</h2>
-          <p>This is a brand new website that I am currently making while in the process of learning HTML.</p>
-          <h2>Who am I?</h2>
-          <p>My name is Praxor, and I am a freelance developer who wants to know more about software development and programming.</p>
-          <hr>
+        <div class="center">
 
-        <h1>Some cool info about me!</h1>
-        <h2>Coding Languages I Know</h2>
-        <p>Some Python, No Java, Currently Learning C#, and I am currently learning HTML.</p>
-        <div id="socials">
-            <h2>Socials</h2>
-            <a href="https://e.rip/☈" target="_blank"><p>Click me to visit my e.rip with my socials!</p></a>
-            <a href="https://discord.gg/BPk88Hsr5Y" target="_blank"><p>Click me to join my Discord server!</p></a>
-            <a href="https://github.com/meowking5" target="_blank"><p>Click me to visit my GitHub!</p></a>
         </div>
-        <hr>
-        <div id="subpages">
-          <h1>Subpages you can visit:</h1>
-          <strong>
-            <a href="https://praxor.wtf/memes" target="_blank">Online Meme Archive by me</a>
-            <a href="https://praxor.wtf/friends" target="_blank">Friend group (Moved here!)</a>
-          </strong>
         </div>
-        <br>
-        <div id="cusfooter">
-          <hr>
-          <br>
-          <img src="./larvi.gif"><img src="./praxor.png" width="64" height="64"><img src="./mac.png" width="64" height="64"><img src="./blue.png" width="64" height="64">
-          <br>
-          <h4><br>made with love by praxor himself <3</h4>
-        </div>
-        </center>
     </body>
 </html>
+
