--- a/index.html
+++ b/index.html
@@ -55,7 +55,15 @@
           </ul>
         </div>
         <div class="center">
-
+          <div class="tui-window blue-168 top">
+            <fieldset class="tui-fieldset">
+              <legend>Welcome</legend>
+               Welcome to my website!
+               <br>
+               <br>
+               This website is still being constructed, I haven't finalized my style of my webpage, but hey, at least I know basic HTML!
+            </fieldset>
+          </div>
         </div>
         </div>
     </body>
