--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </ul>
         </div>
         <div class="center">
-          <div class="tui-window blue-168 top">
+          <div class="tui-window purple-168 top">
             <fieldset class="tui-fieldset">
               <legend>Welcome</legend>
                This website is still being constructed, I haven't finalized my style of my webpage, but hey, at least I know basic HTML!
