i uh well hmm i uh

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <head>
-    <title>Praxor's Website 2.0!</title>
+    <title>Praxor's Website 2.1!</title>
     <link href="style.css" type="text/css" rel="stylesheet">
     <link rel="icon" href="./icon.png">
     <link rel="stylesheet" href="dist/tuicss.min.css"/>
     <script src="dist/tuicss.min.js"></script>
 <!-- Primary Meta Tags -->
-<meta name="title" content="Praxor's Website 2.0!">
+<meta name="title" content="Praxor's Website 2.1!">
 <meta name="description" content="The h0me 0f sc0nes!">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://praxor.wtf/">
-<meta property="og:title" content="Praxor's Website 2.0!">
+<meta property="og:title" content="Praxor's Website 2.1!">
 <meta property="og:description" content="The h0me 0f sc0nes!">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://praxor.wtf">
-<meta property="twitter:title" content="Praxor's Website 2.0!">
+<meta property="twitter:title" content="Praxor's Website 2.1!">
 <meta property="twitter:description" content="The h0me 0f sc0nes!">
 </head>
 <html lang="en" class="tui-bg-purple-black">
@@ -49,6 +49,18 @@
             <fieldset class="tui-fieldset">
               <legend>Welcome</legend>
                This website is still being constructed, I haven't finalized my style of my webpage, but hey, at least I know basic HTML!
+            </fieldset>
+          </div>
+          <br>
+          <div class="tui-window black-168 top" style="margin-top:25px">
+            <fieldset class="tui-fieldset">
+              <legend>Socials</legend>
+              You can find my social media here:
+              <br>
+              <br>
+              <a href="https://e.rip/☈" style="color: blue;">https://e.rip/☈</a>
+              <br>
+              <a href="https://discord.gg/BPk88Hsr5Y" style="color: blue;">https://discord.gg/BPk88Hsr5Y</a>
             </fieldset>
           </div>
         </div>
