--- a/friends.html
+++ b/friends.html
@@ -22,5 +22,7 @@
 <meta property="twitter:description" content="The h0me 0f sc0nes!">
 </head>
 <html lang="en" class="tui-bg-yellow-black">
-  
+  <body class="tui-bg-yellow-black">
+
+  </body>
 </html>
