--- a/friends.html
+++ b/friends.html
@@ -23,6 +23,27 @@
 </head>
 <html lang="en" class="tui-bg-yellow-black">
   <body class="tui-bg-yellow-black">
-
+    <div class="tui-nav">
+        <span class="tui-datetime" data-format="y/M/d H:m:s"></span>
+        <ul>
+          <li class="tui-dropdown">
+            <span class="red-168-text">H</span>ome
+            <a href="https://praxor.wtf">
+          <li class="tui-dropdown">
+            <span class="red-168-text">E</span>xtras
+            <div class="tui-dropdown-content">
+              <ul>
+                <li>
+                  <a href="https://praxor.wtf/friends"><span class="red-168-text">F</span>riends</a>
+                </li>
+                <li>
+                  <a href="https://praxor.wtf/files">F<span class="red-168-text">i</span>les</a>
+                </li>
+              </ul>
+            </div>
+          <li class="tui-dropdown">
+            <span class="red-168-text">A</span>bout
+        </ul>
+      </div>
   </body>
 </html>
