--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
               <div class="tui-dropdown-content">
                 <ul>
                   <li>
-                    <a href="https://praxor.wtf/friends" target="_blank"><span class="red-168-text">F</span>riends</a>
+                    <a href="https://praxor.wtf/friends"><span class="red-168-text">F</span>riends</a>
                   </li>
                   <li>
-                    <a href="https://praxor.wtf/files" target="_blank">F<span class="red-168-text">i</span>les</a>
+                    <a href="https://praxor.wtf/files">F<span class="red-168-text">i</span>les</a>
                   </li>
                 </ul>
               </div>
