--- a/friends.html
+++ b/friends.html
@@ -45,5 +45,66 @@
             <span class="red-168-text">A</span>bout
         </ul>
       </div>
+      <div class="center">
+          <div class="tui-window blue-168 top">
+              <fieldset class="tui-fieldset">
+                  <legend>Friends</legend>
+                  A HUGE LIST OF MY FRIENDS
+                  <br>
+                  god i love typing
+                  <br>
+                  <br>
+                  == Toohi ==
+                  <ul>
+                      <li>- Neat Artist (Music and Art)</li>
+                      <li>- Very creative</li>
+                      <li>- Probably wears socks (UNGAMER)</li>
+                  </ul>
+                  <br>
+                  <br>
+                  == Macintoshing ==
+                  <ul>
+                      <li>- Very Polite Computer Person</li>
+                      <li>- Loves retro stuff</li>
+                      <li>- Probably sings "Stressed Out" in the shower</li>
+                  </ul>
+                  <br>
+                  <br>
+                  == Turio ==
+                  <ul>
+                      <li>- Carrot Lover</li>
+                      <li>- Creative Minecraft Builder</li>
+                      <li>- Probably a carrot addict now that i think about it</li>
+                  </ul>
+                  <br>
+                  <br>
+                  == Blueistic (Bluee) ==
+                  <ul>
+                      <li>- Knows how to wield a virtual sword</li>
+                      <li>- Can get IRL women</li>
+                      <li>- that last one was true no doubt</li>
+                  </ul>
+                  <br>
+                  <br>
+                  == Larvi ==
+                  <ul>
+                      <li>- linux user</li>
+                      <li>- probably the best person to go when you need linux</li>
+                      <li>- he can [$ fetch] him some bitches</li>
+                  </ul>
+                  <br>
+                  <br>
+                  == 'Jacob' (KingJacob105) ==
+                  <ul>
+                      <li>- professional bedwars</li>
+                      <li>- no flex but that man has 10k final kills in bedwars</li>
+                      <li>- he also slept with my mother :(</li>
+                  </ul>
+                  <br>
+                  <br>
+                  Just because you're at the bottom of the list, doesn't make you less important! Friends are friends, even if they're at the bottom of your website.
+              </fieldset>
+          </div>
+      </div>
   </body>
 </html>
