--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Praxor's Website 2.1!</title>
     <link href="style.css" type="text/css" rel="stylesheet">
-    <link rel="icon" href="./icon.png">
+    <a rel="icon" href="./icon.png">
     <link rel="stylesheet" href="dist/tuicss.min.css"/>
     <script src="dist/tuicss.min.js"></script>
 <!-- Primary Meta Tags -->
