--- a/friends.html
+++ b/friends.html
@@ -27,8 +27,7 @@
         <span class="tui-datetime" data-format="y/M/d H:m:s"></span>
         <ul>
           <li class="tui-dropdown">
-            <span class="red-168-text">H</span>ome
-            <a href="https://praxor.wtf">
+            <a href="https://praxor.wtf"><span class="red-168-text">H</span>ome</a>
           <li class="tui-dropdown">
             <span class="red-168-text">E</span>xtras
             <div class="tui-dropdown-content">
