--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Praxor's Website 2.1!</title>
     <link href="style.css" type="text/css" rel="stylesheet">
-    <a rel="icon" href="./icon.png">
+    <link rel="icon" href="./icon.png">
     <link rel="stylesheet" href="dist/tuicss.min.css"/>
     <script src="dist/tuicss.min.js"></script>
 <!-- Primary Meta Tags -->
@@ -27,7 +27,7 @@
           <span class="tui-datetime" data-format="y/M/d H:m:s"></span>
           <ul>
             <li class="tui-dropdown">
-              <span class="red-168-text">H</span>ome
+              <a href="https://praxor.wtf"><span class="red-168-text">H</span>ome</a>
             <li class="tui-dropdown">
               <span class="red-168-text">E</span>xtras
               <div class="tui-dropdown-content">
