--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <head>
     <title>Uh oh!</title>
     <style>
+        html {font: Source+Sans+Pro;}
         body {background-color: rgb(27, 27, 33);}
         h1 {color: white;}
         h2 {color: white;}
@@ -22,7 +23,7 @@
         <hr>
         <p>You had just tried to access a page that doesn't exist or you do not have access to.</p>
         <p>Here's a dumb cat:</p>
-        <video controls autoplay>
+        <video loop autoplay>
             <source src="https://thumbs.gfycat.com/AltruisticIllinformedDwarfrabbit-mobile.mp4" type="video/mp4">
             Your browser doesn't support video output.
         </video>
