--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
         <hr>
         <p>You had just tried to access a page that doesn't exist or you do not have access to.</p>
         <p>Here's a dumb cat:</p>
-        <video loop autoplay>
+        <video controls autoplay loop>
             <source src="https://thumbs.gfycat.com/AltruisticIllinformedDwarfrabbit-mobile.mp4" type="video/mp4">
             Your browser doesn't support video output.
         </video>
