--- a/about.html
+++ b/about.html
@@ -45,36 +45,32 @@
           </ul>
         </div>
         <div class="center">
-          <div class="tui-window purple-168 top">
-            <fieldset class="tui-fieldset">
-              <legend>Welcome</legend>
-               This website is still being constructed, I haven't finalized my style of my webpage, but hey, at least I know basic HTML!
-            </fieldset>
-          </div>
-          <br>
-          <div class="tui-window black-168 top" style="margin-top:25px">
-            <fieldset class="tui-fieldset">
-              <legend>Socials</legend>
-              You can find my social media here:
-              <br>
-              <br>
-              <a href="https://e.rip/☈" style="color: blue;">https://e.rip/☈</a>
-              <br>
-              <a href="https://discord.gg/BPk88Hsr5Y" style="color: blue;">https://discord.gg/BPk88Hsr5Y</a>
-            </fieldset>
-          </div>
-          <br>
-          <div class="tui-window black-168 bottom" style="margin-top:25px">
-            <fieldset class="tui-fieldset">
-              <legend>Quote of the Week (QOTW)</legend>
-              Week of Febuary 27:
-              <br>
-              <br>
-              "oh you switched domains" -macintoshing
-            </fieldset>
-          </div>
-        </div>
+            <div class="tui-window purple-168 top">
+                <fieldset class="tui-fieldset">
+                    <legend>About</legend>
+                    Throughout the years of my experience with coding, I, Praxor, has set out to go figure out a new meaning for the online world, so here I am with a full fledged website, built in HTML, CSS, and JS! The super-duper cool essentials to every website! This website took less than a day to create, so I hope you enjoy my lazy work!
+                </fieldset>
+            </div>
+            <br>
+            <div class="tui-window black-168" style="margin-top:100px">
+                <fieldset class="tui-fieldset">
+                    <legend>Credits</legend>
+                    This website was hosted using GitHub Pages and Cloudflare.<br>
+                    Repository: <a href="https://github.com/meowking5/praxor.wtf" style="color:blue;">https://github.com/meowking5/praxor.wtf</a>
+                    <br>
+                    <br>
+                    This website's design is built with some MS-DOS CSS design.<br>
+                    You can find it here: <a href="https://github.com/vinibiavatti1/TuiCss" style="color:blue;">https://github.com/vinibiavatti1/TuiCss</a>
+                </fieldset>
+            </div>
+            <br>
+            <div class="tui-window white-168 bottom" style="margin-top:50px">
+                <fieldset class="tui-fieldset">
+                    <legend>End</legend>
+                    Sadly you have reached the end of my website (for now).<br>
+                    Stay tuned for more!
+                </fieldset>
+            </div>
         </div>
     </body>
 </html>
-
