--- a/friends.html
+++ b/friends.html
@@ -41,7 +41,7 @@
               </ul>
             </div>
           <li class="tui-dropdown">
-            <span class="red-168-text">A</span>bout
+            <a href="https://praxor.wtf/about"><span class="red-168-text">A</span>bout</a>
         </ul>
       </div>
       <div class="center">
