--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
             </fieldset>
           </div>
         </div>
+        <div class="tui-statusbar absolute blue-168">
+          <ul>
+            <li>Test</li>
+            <li>One Mo' Time</li>
+          </ul>
         </div>
     </body>
 </html>
